--- a/src/main/webapp/pages/home.html
+++ b/src/main/webapp/pages/home.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>ATM Search</title>
-<link href="../css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -20,7 +20,7 @@
 						<button type="submit" class="btn btn-primary">Search</button>
 					</div>
 					<div class="help-block row col-xs-12" ng-messages="atmSearchForm.cityName.$error" ng-if="atmSearchForm.cityName.$touched">
-						<div ng-messages-include="messages.html"></div>
+						<div ng-messages-include="pages/messages.html"></div>
 					</div>
 				</div>
 			</form>
@@ -56,13 +56,13 @@
 	</div>
 </div>
 	
-<script type="text/javascript" src="../js/angular.min.js"></script>
-<script type="text/javascript" src="../js/angular-route.min.js"></script>
-<script type="text/javascript" src="../js/angular-animate.min.js"></script>
-<script type="text/javascript" src="../js/angular-messages.min.js"></script>
-<script type="text/javascript" src="../js/angular-touch.min.js"></script>
-<script type="text/javascript" src="../js/ui-bootstrap-tpls-1.3.2.min.js"></script>
-<script type="text/javascript" src="../js/smart-table.min.js"></script>
-<script type="text/javascript" src="../js/atmlocator.js"></script>
+<script type="text/javascript" src="js/angular.min.js"></script>
+<script type="text/javascript" src="js/angular-route.min.js"></script>
+<script type="text/javascript" src="js/angular-animate.min.js"></script>
+<script type="text/javascript" src="js/angular-messages.min.js"></script>
+<script type="text/javascript" src="js/angular-touch.min.js"></script>
+<script type="text/javascript" src="js/ui-bootstrap-tpls-1.3.2.min.js"></script>
+<script type="text/javascript" src="js/smart-table.min.js"></script>
+<script type="text/javascript" src="js/atmlocator.js"></script>
 </body>
 </html>
